# acp-desk

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md  package-lock.json  package.json
crates/acp-core/: Cargo.toml
crates/acp-core/src/: events.rs  lib.rs  permission.rs  session.rs  store.rs  transcript.rs
poc/: Cargo.toml
poc/src/: main.rs
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: agents.rs  bridge.rs  lib.rs  main.rs
src/lib/: chat-core.test.ts  chat-core.ts  chat.svelte.ts  diff.test.ts  diff.ts  ipc.ts  markdown.test.ts  markdown.ts
src/lib/components/: AgentSettings.svelte  Composer.svelte  MessageBubble.svelte  PermissionCard.svelte  Sidebar.svelte
src/routes/: +layout.ts  +page.svelte
