[workspace]
resolver = "2"
members = ["src-tauri", "crates/acp-core"]
# poc is a standalone throwaway binary; keeping it out of the workspace
# avoids coupling its dependency versions to the app.
exclude = ["poc"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[workspace.dependencies]
agent-client-protocol = "1.2"
anyhow = "1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
